[package]
name = "rfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
whoami = "1.4"

[features]
default = ["config"]
config = ["dep:serde", "dep:toml", "dep:dirs"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
